# ankimaxxing

./: .env  .env.example  .gitattributes  .gitignore  README.md  anki-rewriter-plan.md  pyproject.toml  requirements.txt  start.sh
backend/: anki_client.py  card_interpreter.py  config.py  content_normalizer.py  jobs.py  llm_provider.py  main.py  note_type_registry.py  prompts.py  rewrite_engine.py  storage.py  template_patch_manager.py  validation_engine.py
backend/api/: audit.py  decks.py  rewrites.py  settings.py  templates.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/app/audit/: page.tsx
frontend/app/decks/: page.tsx
frontend/app/rewrite/: page.tsx
frontend/app/rewrite/[jobId]/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/templates/: page.tsx
frontend/lib/: api.ts  utils.ts
scratch/: test_anki.py
